--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ footer {
     align-items: center;
     margin-right: 50px;
     color: #c2c2c2;
+    font-size: 0.7rem;
 }
 #contactText {
 
@@ -33,7 +34,7 @@ footer {
 .navbar ul{
     display: grid;
     grid-template-columns: 3fr 1.5fr 1fr 1fr 1fr 1fr 1fr 2fr;
-    grid-template-rows: 1;
+
     align-items: center;
     justify-items: center;
     list-style: none;
@@ -93,9 +94,10 @@ a {
 
 .background-pianolessons img{
     width: 100%;
-    height: 100%;
+    height: 99%;
     object-fit: cover;
     max-width: 100%;
+    padding: 1px;
     }
 .container-events {
     display: flex;
@@ -154,7 +156,7 @@ a {
     justify-content: center;
 }
 h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: #000;
     font-weight: normal;
 }
@@ -184,6 +186,7 @@ h2 {
     height: 75vh;
     grid-template-columns: 1.5fr 1fr 1fr;
     grid-template-rows:2fr 1fr 3fr;
+    justify-content: center;
 
 }
 
@@ -192,7 +195,6 @@ h2 {
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 3;
-    font-size: 3rem;
     margin-top: 12%;
     margin-left: 20%;
     margin-right: 20%;
@@ -229,6 +231,8 @@ h2 {
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 4;
+   
+
 }
 
 .gradient-block {
@@ -249,7 +253,7 @@ h2 {
     grid-row-gap: 25px;
     margin: 3%;
     margin-bottom: 0%;
-  
+
     
 }
 .language {
@@ -288,7 +292,6 @@ h2 {
     align-items: center;
    
 }
-/* Tutaj znajdziesz obramowanie guzików */
 .public-buttons {  
     text-decoration: none;
     border: 2px solid rgb(196, 196, 196);
@@ -324,8 +327,8 @@ h2 {
 
 .logo {
     
-height:35vh;
-min-width: auto;
+max-height:35vh;
+max-width: auto;
 
 }
 
@@ -341,14 +344,12 @@ min-width: auto;
     font-family: "Bellefair", serif;
     font-size: 1.5rem;
     font-weight: 100;
-    /* height: 70px;
-    width: 240px; */
     height: 7vh;
     width: 12vw;
     justify-content: center;
     letter-spacing: -.8px;
     line-height: 24px;
-    min-width: 300px;
+    min-width: 170px;
     outline: 0;
     padding: 0 17px;
     text-align: center;
@@ -357,6 +358,7 @@ min-width: auto;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+  
   
   }
   
@@ -375,159 +377,222 @@ min-width: auto;
     color: #D4A68C;
     fill: #D4A68C;
   }
-
-@media (max-width:1400px) {
-    html {
-        font-size: 16px;
-    }
+@media (orientation: portrait) {
     body {
-        padding: 0px;
-        margin: 0px;
-    
-    }
-    footer {
-        height: 10vh;
         display: flex;
-        justify-content: end;
-        align-items: center;
-        margin-right: 50px;
-        color: #c2c2c2;
+        flex-direction: column;
+        gap: 8vh;
+        margin: 0px;
+        bottom: 0px;
     }
-    #contactText {
+
     
-        text-align: center;
+
+    header {
+        height: 8vh;
+        background-color: white;
     }
-    
-    #contactText a{
-        color: #BD754B;
+
+    .container-mainpage {
+        margin: 20px;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
     }
+    .language {
+        display: none;
+        visibility: hidden;
+    }
+    .buttons {
+        justify-content: space-around;
+        padding-top: 20px;
+    }
+
+    .portret-strony-głównej {
+   
+        padding-top: 1px;
+        max-height: 92vh;
+        max-width: 100vh;
+    }
+    .logo-navbar {
+        
+        max-width: 200px;
+        object-fit: contain;
+        padding-left: 3vw;
+    }
+
     .navbar ul{
         display: grid;
-        grid-template-columns: 2fr 1.5fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: 1;
+        align-items: center;
+        justify-items: center;
         list-style: none;
-        font-size: 1.5rem;
-        grid-column-gap: 5px;
-        width: 97vw;
+        font-size: 1.1rem;
+        grid-column-gap: 1vw;
+        margin: 0px;
+        padding: 0px;
+        
+       
         
     }
+
+    .container-subpage {
+        display: flex;
+        flex-direction: column;
+        margin-top:8vh;
+        gap: 20px;
+        
+    }
+    .mainText h1 {
+       
+        margin-top: 12%;
+        margin-left: 20%;
+        margin-right: 20%;
+        
+    
+    }
+    .mainText p {
+        
+        font-size: 1.5rem; 
+        margin-left: 20%;
+        margin-right: 20%;
+        margin-top: 10%;
+        
+    }
+
+
+
     #langButton {
         display: none;
         visibility: hidden;
     }
+
+    .gradient-block {
+        display: none;
+        visibility: hidden;
+    }
+
+    .background-pianolessons {
+        display: flex;
+        width: 100vw;
+        order: -1;
+        z-index: -1;
+
+    }
+    .buttons-subpage {
     
-    .logo-navbar {
-        height: 10vh;
     }
-    .navbar a {
-        color: black;
-        transition: color 0.4s;
-    }
-    .navbar a:hover {
-        color: #BD754B;
-    }
-    
-      
-    a {
-        text-decoration: none;
-        transition: color 0.4s;
-    }
-    
-    .buttons a:hover {
-        color: #BD754B;
-    }
-    .language a:hover {
-        color: #BD754B;
-    }
-    
     .mainText {
         text-align: center;
     }
     
     .background-pianolessons img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-
+        width: 100vw;
+        padding: 0px;
         }
-    .container-events {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 50px;
-       
     
-    }
-    .event {
-        display: grid;
-        grid-template-columns: 2fr 3fr;
-        grid-template-rows: 1fr 1fr;
-        height: 300px;
-        width: 70vw;
-        border-style: solid;
-        border-color: black;
-        padding: 30px;
-        margin-bottom: 50px;
-        justify-items: center;
-        align-items: center;
-        
+footer {
+    height: 10vh;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-right: 50px;
+    color: #c2c2c2;
+    font-size: 0.7rem;
+    order:3;
+}
+
+
+
+h1 {
+    font-size: 2.5rem;
+    color: #000;
+    font-weight: normal;
+}
+h2 {
+    font-weight: normal;
+
+}
+
+
+
+.mainText h1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    margin-top: 12%;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-weight: normal;
+
+}
+.mainText p {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    font-size: 1.5rem;
+    text-align: justify ;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 10%;
+
+
+}
+
+.buttons-subpage {
     
-    }
-    
-    .event img {
-        display: grid;
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 1;
-        grid-row-end: 3;
-        max-height: 100%;
-        
-    }
-    .event h2 {
-        display: grid;
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 2;
-        text-align: center;
-    }
-    
-    .event p {
-        display: grid;
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 2;
-        grid-row-end: 3;
-        text-align: center;
-    
-        
-    }
-    .container-podcast {
-        display: flex;
-        justify-content: center;
-    }
-    h1 {
-        font-size: 1.5rem;
-        font-weight: normal;
-        color: #000;
-    }
-    
-    .podcasts {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 10%;
-        margin-top:50px;
-        margin-bottom: 0px;
-        padding: 10%;
-        padding-top: 0px;
-        padding-bottom: 50px;
-        gap: 100px;
-    
-    
-    }
-    
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.background-pianolessons {
+
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 4;
+   
+
+}
+
+
+
+.buttons {
+    grid-column-start:1;
+    grid-column-end:3;
+    grid-row-start:3;
+    grid-row-end: 4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+.public-buttons {  
+    text-decoration: none;
+    border: 2px solid rgb(196, 196, 196);
+  background-color: white;
+  color: black;
+  padding: 14px 14px;
+  font-size: xx-large;
+  cursor: pointer; 
+}
+
+}
+@media (max-width:1430px) and (orientation: landscape) {
+   .navbar ul {
+    font-size: 1.5rem;
+   }
+
+   #langButton {
+    font-size: 1.5rem;
+   }
     .container-subpage {
         display: grid;
         width: 100vw;
@@ -537,153 +602,30 @@ min-width: auto;
     
     }
     
-    .mainText h1 {
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 1;
-        grid-row-end: 3;
-        font-size: 2.5rem;
-        margin-top: 12%;
-        margin-left: 20%;
-        margin-right: 20%;
-    
-    }
     .mainText p {
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 3;
+
         font-size: 1.2rem;
         text-align: justify ;
-        margin-left: 20%;
-        margin-right: 20%;
-        margin-top: 10%;
-    
-    
+
     }
-    
-    .buttons-subpage {
-        
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 3;
-        grid-row-end: 4;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
-    .background-pianolessons {
-    
-        grid-column-start: 2;
-        grid-column-end: 4;
-        grid-row-start: 1;
-        grid-row-end: 4;
-    }
-    
-    .gradient-block {
-        background-image: linear-gradient(to left, rgba(255,255,255,0.0), rgba(255,255,255,1));
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 4;
-        z-index: 1;
-    }
-    
-    .container-mainpage {
-        height: 92vh;
-        display: grid;
-        grid-template-columns: 1fr 1fr 2fr;
-        grid-template-rows: 0.5fr 2fr 1fr;
-        grid-column-gap: 10px;
-        grid-row-gap: 15px;
-        margin: 3%;
-        margin-bottom: 0%;
-      
-    
-    }
-    body {
-        font-family: "Bellefair", serif;
-        font-weight: 100;
-        font-style: normal;
-        
-        
-    }
-    .language {
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 1;
-        grid-row-end: 2;
-        
-       
-        display: flex;
-        justify-content: space-around;
-        
-     }
-    
+
      .language-change {
         text-decoration: none;
         color: #D4A68C;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
      }
-    .signature {
-        grid-column-start: 1;
-        grid-column-end:3;
-        grid-row-start:2;
-        grid-row-end:3;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .buttons {
-        grid-column-start:1;
-        grid-column-end:3;
-        grid-row-start:3;
-        grid-row-end: 4;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-       
-    }
-    /* Tutaj znajdziesz obramowanie guzików */
-    .public-buttons {  
-        text-decoration: none;
-        border: 2px solid rgb(196, 196, 196);
-      background-color: white;
-      color: black;
-      padding: 14px 14px;
-      font-size: xx-large;
-      cursor: pointer; 
-    }
-    .portret {
-       
-        grid-column-start:3;
-        grid-column-end: 3;
-        grid-row-start:1;
-        grid-row-end:4;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .portret-strony-głównej {
-       
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: flex-end;
-        justify-content: end;
-    }
-    
-    .logo {
-        
-    height:55vh;
-    
-    }
-    
     .mainButtons {
+       
+        font-size: 1.2rem;
+        height: 50px;
+        width: 200px;
+        min-width: 140px;
+       
+      }
+      
+
+
+      .mainButtons {
         align-items: center;
         background-color: #fff;
         border: 1px solid #787878;
@@ -693,14 +635,14 @@ min-width: auto;
         display: inline-flex;
         fill: #D4A68C;
         font-family: "Bellefair", serif;
-        font-size: 1rem;
+        font-size: 1.5rem;
         font-weight: 100;
-        height: 50px;
-        width: 100px;
+        height: 7vh;
+        width: 12vw;
         justify-content: center;
         letter-spacing: -.8px;
         line-height: 24px;
-        min-width: 140px;
+        min-width: 170px;
         outline: 0;
         padding: 0 17px;
         text-align: center;
@@ -710,104 +652,101 @@ min-width: auto;
         -webkit-user-select: none;
         touch-action: manipulation;
       
-      }
       
-      .mainButtons:focus {
-        color: #D4A68C;
-      }
-      
-      .mainButtons:hover {
-        border-color: #D4A68C;
-        color: #D4A68C;
-        fill: #D4A68C;
-      }
-      
-      .mainButtons:active {
-        border-color: #D4A68C;
-        color: #D4A68C;
-        fill: #D4A68C;
       }
 }
 
 
 
-@media (max-width:1072px) {
+@media (max-width:1281px) and (orientation: landscape) {
+    .navbar ul {
+        font-size: 1.4rem;
+       }
+       #langButton {
+        font-size: 1.4rem;
+       }
+       .mainButtons {
+       
+        font-size: 1.1rem;
+        height: 50px;
+        width: 180px;
+        min-width: 140px;
+       
+      }
 
-    .container {
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        margin: 3%;
-        margin-bottom: 0%;
+}
+
+@media (max-width:1026px) and (orientation: landscape){
+    .navbar ul {
+        font-size: 1rem;
     }
+    
+       #langButton {
+        font-size: 1rem;
+       }
 
-    body {
-        font-family: "Bellefair", serif;
-        font-weight: 100;
-        font-style: normal;
-        margin: 0;
-        padding: 0;
         
-    }
-    .language {
-       display: none;
-       visibility: hidden;
-     }
+        .mainText p {
     
-     .language-change {
-        text-decoration: none;
-        color: #BD9177;
-        font-size: xx-large;
-     }
-    .signature {
-        align-items: center;
-        justify-content: center;
-    }
+            font-size: 1rem;
+            text-align: justify ;
     
-    .buttons {
-        justify-content: space-around;
-        align-items: center;
-       
-    }
+        }
     
-    .public-buttons {
-        text-decoration: none;
-       
-        border-radius: 0%;
-        border-color: black;
-        border-width: 3px;
-        color: black;
-        font-size: x-large;
-    }
-    .portret {
- 
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .portret-strony-głównej {
-       
+         .language-change {
+            text-decoration: none;
+            color: #D4A68C;
+            font-size: 1rem;
+         }
+        .mainButtons {
+           
+            font-size: 0.9rem;
+            height: 40px;
+            width: 150px;
+            min-width: 140px;
+           
+          }
+}
 
-        align-items: flex-end;
-        justify-content: center;
+
+@media (max-width:801px) and (orientation: landscape){
+    .navbar ul {
+        font-size: 0.7rem;
     }
     
-    .logo {
+       #langButton {
+        border: 1px solid;
+      background-color: white;
+      color: black;
+      padding: 7px 7px;
+      font-size: 0.7rem;
+      
+    }
+    
+        h1{
+        font-size: 1.7rem;
+       }
         
-    height:35vh;
+        .mainText p {
     
-    }
-
+            font-size: 0.8rem;
+            text-align: justify ;
+    
+        }
+    
+         .language-change {
+            text-decoration: none;
+            color: #D4A68C;
+            font-size:  0.8rem;
+         }
+        .mainButtons {
+           
+            font-size: 0.7rem;
+            height: 40px;
+            width: 120px;
+            min-width: 100px;
+           
+          }
 }
 
-@media (max-width:600px) {
 
-}
-
-
-
-@media (min-width: 768px) {
-  .mainButtons {
-    min-width: 170px;
-  }
-} 
