--- a/css/style.css
+++ b/css/style.css
@@ -588,7 +588,7 @@ h2 {
     display: inline-flex;
     fill: #D4A68C;
     font-family: "Bellefair", serif;
-    font-size: 2rem;
+    font-size: 3vw;
     height: 7vh;
     width: 30vw;
     outline: 0;
