--- a/css/style.css
+++ b/css/style.css
@@ -634,7 +634,14 @@ h2 {
         color: #D4A68C;
         font-size: 1.3rem;
      }
-
+    .mainButtons {
+       
+        font-size: 1.2rem;
+        height: 50px;
+        width: 200px;
+        min-width: 140px;
+       
+      }
       
 
 
@@ -650,7 +657,14 @@ h2 {
        #langButton {
         font-size: 1.4rem;
        }
-
+       .mainButtons {
+       
+        font-size: 1.1rem;
+        height: 50px;
+        width: 180px;
+        min-width: 140px;
+       
+      }
 
 }
 
@@ -676,7 +690,14 @@ h2 {
             color: #D4A68C;
             font-size: 1rem;
          }
-
+        .mainButtons {
+           
+            font-size: 0.9rem;
+            height: 40px;
+            width: 150px;
+            min-width: 140px;
+           
+          }
 }
 
 
@@ -710,9 +731,15 @@ h2 {
             color: #D4A68C;
             font-size:  0.8rem;
          }
-
+        .mainButtons {
+           
+            font-size: 0.7rem;
+            height: 40px;
+            width: 120px;
+            min-width: 100px;
+           
+          }
 }
-
 
 
 
