--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,6 @@ h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10px;
    
 }
 .public-buttons {  
@@ -343,7 +342,7 @@ max-width: auto;
     display: inline-flex;
     fill: #D4A68C;
     font-family: "Bellefair", serif;
-    font-size: 3.2vw;
+    font-size: 1.5rem;
     font-weight: 100;
     height: 7vh;
     width: 12vw;
@@ -362,7 +361,6 @@ max-width: auto;
   
   
   }
-  
   
   .mainButtons:focus {
     color: #D4A68C;
@@ -635,11 +633,20 @@ h2 {
         color: #D4A68C;
         font-size: 1.3rem;
      }
-
+    .mainButtons {
+       
+        font-size: 1.2rem;
+        height: 50px;
+        width: 200px;
+        min-width: 140px;
+       
+      }
       
 
 
 
+      
+      }
 }
 
 
@@ -651,7 +658,14 @@ h2 {
        #langButton {
         font-size: 1.4rem;
        }
-
+       .mainButtons {
+       
+        font-size: 1.1rem;
+        height: 50px;
+        width: 180px;
+        min-width: 140px;
+       
+      }
 
 }
 
@@ -677,7 +691,14 @@ h2 {
             color: #D4A68C;
             font-size: 1rem;
          }
-
+        .mainButtons {
+           
+            font-size: 0.9rem;
+            height: 40px;
+            width: 150px;
+            min-width: 140px;
+           
+          }
 }
 
 
@@ -711,8 +732,13 @@ h2 {
             color: #D4A68C;
             font-size:  0.8rem;
          }
-
+        .mainButtons {
+           
+            font-size: 0.7rem;
+            height: 40px;
+            width: 120px;
+            min-width: 100px;
+           
+          }
 }
-
-
 
