--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ max-width: auto;
     display: inline-flex;
     fill: #D4A68C;
     font-family: "Bellefair", serif;
-    font-size: 1.5rem;
+    font-size: 3vw;
     font-weight: 100;
     height: 7vh;
     width: 12vw;
