--- a/css/style.css
+++ b/css/style.css
@@ -382,8 +382,9 @@ max-width: auto;
     body {
         display: flex;
         flex-direction: column;
-        margin: 30px;
-        margin-bottom: 0px;
+   margin: 0px;
+        padding: 30px;
+        padding-bottom: 0px;
     }
 
     .logo {
